# CanidComics

./: .projections.json  CHANGELOG.md  README.md  api.cabal  hie.yaml  stack.yaml
app/: .Main.hs.swp  Main.hs
migrations/: M20210301_add_comics_table.hs  rivet.hs
src/: Api.hs  Prelude.hs
src/Api/: .Comics.hs.swp  .Types.hs.swp  Comics.hs  Database.hs
src/Api/Database/: Tables.hs
src/Api/Database/Tables/: Comics.hs  Users.hs
src/Server/: App.hs  Model.hs
