cabal-version:       2.4
name:                api
version:             0.0.0.0
synopsis:            Canid Comics API
description:         Canid Comics API
license:             MIT
license-file:        LICENSE
author:              Reyu Zenfold
maintainer:          Reyu Zenfold <reyu@reyuzenfold.com>
copyright:           2021 Reyu Zenfold
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

common relude
  import:              common-options
  build-depends:       base-noprelude ^>= 4.13.0.0
                     , relude ^>= 0.6.0.0
common prelude
  import:              common-options
  build-depends:       base ^>= 4.13.0.0

library
  import:              relude
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Comics
  other-modules:       Prelude
                     , Api.Database
  build-depends:       aeson
                     , dotenv
                     , directory
                     , HDBC
                     , HDBC-postgresql
                     , mtl
                     , servant
                     , servant-docs
                     , servant-server

executable api
  import:              prelude
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       api
                     , warp
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable migrate
  import:              relude
  hs-source-dirs:      src migrations
  main-is:             rivet.hs
  build-depends:       rivet-core
                     , rivet-adaptor-postgresql
                     , directory
                     , configurator
                     , dotenv
  other-modules:       Prelude
                     , M20210301_add_comics_table

test-suite api-test
  import:              prelude
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       api
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark api-benchmark
  import:              prelude
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , api
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
