cabal-version:       2.4
name:                api
version:             0.0.0.0
synopsis:            Canid Comics API
description:         Canid Comics API
license:             MIT
license-file:        LICENSE
author:              Reyu Zenfold
maintainer:          Reyu Zenfold <reyu@reyuzenfold.com>
copyright:           2021 Reyu Zenfold
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base-noprelude    >= 4.12.0.0
                     , relude            >= 0.5.0
                     , text              >= 1.2.3.1
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

common servant
  build-depends:       servant           >= 0.16.2
                     , servant-server    >= 0.16.2
                     , servant-client

common postgres
  build-depends:       beam-postgres     >= 0.4.0.0
                     , postgresql-simple >= 0.6.2

library
  import:              common-options
                     , servant
                     , postgres
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Comics
                     , Api.Database
                     , Api.Database.Tables
                     , Api.Database.Tables.Comics
                     , Api.Database.Tables.Users
                     , Server.App
                     , Server.Model
                     , Prelude
  default-extensions:  DataKinds
                     , DerivingStrategies
                     , TypeOperators
                     , OverloadedStrings
  build-depends:       aeson             >= 1.4.6.0
                     , beam-core         >= 0.8.0.0
                     , bytestring        >= 0.10.8.2
                     , dotenv            >= 0.8.0.4
                     , directory         >= 1.3.3.0
                     , lens              >= 4.17.1
                     , mtl               >= 2.2.2
                     , postgresql-libpq  >= 0.9.4.2
                     , postgresql-simple >= 0.6.2
                     , warp              >= 3.3.5

executable api
  import:              common-options
                     , servant
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       api
                     , warp              >= 3.3.5
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite api-test
  import:              common-options
                     , servant
                     , postgres
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       api
                     , hspec
                     , hspec-wai
                     , http-client
                     , http-types
                     , servant-client
                     , QuickCheck
                     , warp
  other-modules:       TestHelper
                     , Api.ComicsSpec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark api-benchmark
  import:              common-options
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , api
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
